# orxonox-game-code

./: CMakeLists.txt  Doxyfile  INSTALL  README  TODO  cmakeclearcache  test.txt  tolua-build  tolua-exec-script.bat
code/branches/FICN/: CMakeLists.txt  FICN.sln  INSTALL  audio.vcproj  benixonox.vcproj  cmakeclearcache  core.vcproj  loader.vcproj  network.vcproj  run  tiny_xml.vcproj
code/branches/buildsystem/: CMakeLists.txt  TODO_buildsystem  run  update_media
code/branches/buildsystem2/: CMakeLists.txt  TODO_buildsystem  doxy.config.in
code/branches/weapon_system_fw/: CMakeLists.txt
code/trunk/: CMakeLists.txt  INSTALL  TODO  updateMedia.sh
code/trunk/Tutorial/: CMakeLists.txt  build-script-tardis  main.cpp  name.txt
code/trunk/cmake/: AddSourceFiles.cmake  BuildConfig.cmake  CompilerConfig.cmake  CompilerConfigGCC.cmake  CompilerConfigMSVC.cmake  FindCEGUI.cmake  FindCEGUI_OGRE.cmake  FindDirectX.cmake  FindENet.cmake  FindLua.cmake  FindOGRE.cmake  FindOIS.cmake  FindOggVorbis.cmake  FindOpenAL.cmake  FindTCL.cmake  FindZLIB.cmake  GenerateToluaBindings.cmake  LibraryConfig.cmake  LibraryConfigTardis.cmake  Media.cmake  PackageConfig.cmake  PackageConfigMSVC.cmake  PackageConfigOSX.cmake  ParseMacroArguments.cmake  PrecompiledHeaderFiles.cmake  SourceFileUtilities.cmake  TargetUtilities.cmake
code/trunk/contrib/: orxonox.desktop
code/trunk/data/: CMakeLists.txt
code/trunk/media/: CMakeLists.txt
code/trunk/src/: CMakeLists.txt  Orxonox.cc  OrxonoxConfig.cmake  SpecialConfig.h.in  orxonox.cc
code/trunk/test/: CMakeLists.txt
code/trunk/visual_studio/: base_properties.vsprops  base_properties_debug.vsprops  base_properties_release.vsprops  core_properties.vsprops  network_properties.vsprops  orxonox_properties.vsprops  orxonox_vc8.sln  tolua++_properties.vsprops  tolua_app_properties.vsprops  tolua_properties.vsprops  util_properties.vsprops
src/: CMakeLists.txt  Orxonox.cc  OrxonoxConfig.cmake  OrxonoxConfig.h.in  OrxonoxMac.mm  SourceConfig.cmake  SpecialConfig.h.in  orxonox-main.vcproj.user.in  orxonox.cc
src/asylum/core/: InputEventListener.cc  InputEventListener.h
src/asylum/loader/: LevelLoader.cc
src/audio/: AudioBuffer.cc  AudioBuffer.h  AudioIncludes.h  AudioManager.cc  AudioManager.h  AudioPrereqs.h  AudioSource.cc  AudioStream.cc
src/bullet/BulletDynamics/: CMakeLists.txt
src/bullet/LinearMath/: CMakeLists.txt
src/ceguilua-0.5.0b/ceguilua/: CEGUILua.cpp  CMakeLists.txt
src/ceguilua-0.6.1/ceguilua/: CMakeLists.txt  Makefile.am
src/core/: ArgumentCompletionFunctions.cc  ArgumentCompletionListElement.h  BaseObject.cc  BaseObject.h  CMakeLists.txt  ClassManager.h  ClassTreeMask.cc  ClassTreeMask.h  CommandEvaluation.cc  CommandExecutor.cc  CommandExecutor.h  CommandLine.cc  CommandLine.h  ConfigFileManager.cc  ConfigFileManager.h  ConfigValueContainer.cc  ConfigValueIncludes.h  ConsoleCommand.cc  ConsoleCommand.h  ConsoleCommandCompilation.h  Core.cc  Core.h  CoreIncludes.h  CorePrecompiledHeaders.h  CorePrereqs.h  CoreSettings.cc  CoreSettings.h  Error.cc  Event.h  EventIncludes.h  Executor.cc  Executor.h  Factory.cc  Factory.h  Functor.h  Game.cc  Game.h  GameState.cc  GameState.h  IRC.cc  (+44 more)
src/core/input/: Button.cc  Button.h  ExtendedInputState.cc  ExtendedInputState.h  HalfAxis.cc  HalfAxis.h  InputBuffer.h  InputCommands.cc  InputCommands.h  InputInterfaces.h  InputManager.cc  InputManager.h  InputPrereqs.h  InputState.h  JoyStickDeviceNumberListener.cc  JoyStickDeviceNumberListener.h  KeyBinder.cc  KeyBinder.h  KeyDetector.cc  SimpleInputState.cc  SimpleInputState.h
src/cpptcl/: CMakeLists.txt  CppTcl.cc  CppTcl.h  changes_orxonox.diff
src/enet/: Makefile
src/libraries/core/: Core.cc  (+71 more)
src/loader/: CMakeLists.txt  LevelLoader.cc  LoaderPrereqs.h
src/lua/: README
src/modules/: CMakeLists.txt
src/network/: CMakeLists.txt  ChatListener.cc  ChatListener.h  Client.cc  Client.h  ClientConnection.cc  ClientConnection.h  ClientInformation.cc  ClientInformation.h  ConnectionManager.cc  ConnectionManager.h  FunctionCallManager.h  GameStateClient.cc  GameStateClient.h  GameStateManager.cc  GameStateManager.h  GamestateClient.cc  GamestateClient.h  GamestateManager.cc  GamestateManager.h  Host.cc  Host.h  Makefile.norm  NetworkCallback.h  NetworkFunction.cc  NetworkFunction.h  NetworkPrecompiledHeaders.h  NetworkPrereqs.h  PacketBuffer.cc  PacketBufferTestExt.cc  PacketDecoder.cc  PacketGenerator.cc  PacketManager.h  PacketTypes.h  Server.cc  Server.h  ServerConnection.cc  Synchronisable.cc  Synchronisable.h  TrafficControl.cc  (+5 more)
src/ogreceguirenderer/: OgreCEGUIRenderer.cpp  changes_orxonox.diff
src/ois/: CMakeLists.txt
src/orxonox/: CMakeLists.txt  CameraManager.cc  CameraManager.h  ChatInputHandler.cc  ChatInputHandler.h  GraphicsEngine.cc  GraphicsEngine.h  GraphicsManager.cc  InputEventListener.cc  InputEventListener.h  Level.cc  LevelInfo.cc  LevelInfo.h  LevelManager.cc  LevelManager.h  Main.cc  MoodManager.cc  MoodManager.h  Orxonox.cc  Orxonox.h  OrxonoxPlatform.h  OrxonoxPrereqs.h  OrxonoxStableHeaders.h  PawnManager.cc  PlayerManager.cc  PrecompiledHeaderFiles.cc  Radar.cc  Radar.h  RadarViewable.cc  RenderQueueListener.h  Scene.cc  Scene.h  Settings.cc  Settings.h  ShipPartManager.cc  ShipPartManager.h  SignalHandler.cc  SpaceshipSteering.cc  SpaceshipSteering.h  Test.cc  (+2 more)
src/tinyxml/: ticpp.h
src/tolua/: CMakeLists.txt  tolua++.h  tolua-5.0.pkg  tolua.pkg  toluabind_orxonox.h
src/util/: ArgReader.cc  CMakeLists.txt  CRC32.cc  CRC32.h  Clipboard.cc  Convert.h  Debug.h  Exception.cc  Exception.h  ExprParser.cc  Integers.h  Math.cc  Math.h  MultiType.cc  MultiType.h  MultiTypeMath.h  MultiTypePrimitive.h  MultiTypeString.cc  MultiTypeString.h  MultiTypeValue.h  OrxonoxPlatform.h  OutputBuffer.cc  OutputHandler.cc  OutputHandler.h  Serialise.h  SignalHandler.cc  SignalHandler.h  Sleep.cc  Sleep.h  String.cc  String.h  StringUtils.cc  SubString.cc  SubString.h  UtilPrereqs.h  XMLIncludes.h  mbool.h  substring.h
test/: CMakeLists.txt
test/core/: CMakeLists.txt
test/util/: CMakeLists.txt  MultiTypeTest.cc
(+16879 files in other folders)
